# github-crawler

./: README.md  main.py  pyproject.toml
app/: crawlers.py  main.py  models.py  settings.py
app/data/: input_example1.json  input_example2.json  input_example3.json  input_example4.json  output_example1.json  output_example2.json  output_example3.json  output_example4.json
tests/test_data/: cloud_storage.html  github_test.html
tests/unit/: test_crawler.py
