[tool.poetry]
name = "github-crawler"
version = "0.1.0"
description = ""
authors = ["Ivan Yukish <iwan.jukisch@gmail.com>"]
readme = "README.md"
packages = [{include = "github_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
grequests = "^0.6.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
