[tool.poetry]
name = "github-crawler"
version = "0.1.0"
description = ""
authors = ["Ivan Yukish <iwan.jukisch@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
grequests = "^0.7.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
